# oxidize-xml

./: .gitignore  README.md  build.sh  main.py  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
oxidize-xml/: Cargo.toml  __init__.py  pyproject.toml
oxidize-xml/src/: lib.rs
oxidize-xml/src/io/: error.rs  python_api.rs
tests/: README.md  conftest.py
tests/fixtures/: sample_files.py
tests/integration/: test_basic_functionality.py  test_error_handling.py  test_improved_error_handling.py
tests/performance/: test_benchmarks.py  test_memory_usage.py
tests/unit/: test_edge_cases.py
